--- a/style.css
+++ b/style.css
@@ -24,6 +24,57 @@
     border-top: none;
     border-left: none;
 }
+#campo1:active{
+    background-color: red;
+}
+#campo2{
+    border-top: none;
+}
+#campo2:active{
+    background-color: red;
+}
+#campo3{
+    border-top: none;
+    border-right: none;
+}
+#campo3:active{
+    background-color: red;
+}
+#campo4{
+    border-left: none;
+}
+#campo4:active{
+    background-color: red;
+}
+#campo5:active{
+    background-color: red;
+}
+#campo6{
+    border-right: none;
+}
+#campo6:active{
+    background-color: red;
+}
+#campo7{
+    border-left: none;
+    border-bottom: none;
+}
+#campo7:active{
+    background-color: red;
+}
+#campo8{
+    border-bottom: none;
+}
+#campo8:active{
+    background-color: red;
+}
+#campo9{
+    border-right: none;
+    border-bottom: none;
+}
+#campo9:active{
+    background-color: red;
+}
 .campo-central > div{
     border: 1px solid;
     height: 70px;
@@ -34,3 +85,4 @@
     height: 70px;
     width: 35%;
 }
+
